updated css structure

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Expresso</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -27,7 +27,7 @@
 
         <div class="headerWrap col-1 padding-30-TB">
             <header class="wrapper clearfix gridWidth">
-                <h1 class="title"><a href="#"><img src="img/logo.png"/></a></h1>
+                <h1 class="title"><a href="#"><img src="img/logo.png" alt="Expresso"/></a></h1>
                 <nav>
 					<ul>
 						<li><a href="#"><i class="fa fa-envelope-o fa-fw"></i>&nbsp; Info@expreso.com</a></li>
@@ -51,7 +51,12 @@
             <div class="main wrapper clearfix">
 				<section class="getStarted">
 					<div class="gridWidth">
-						
+						<div class="desktopPreview col-3 floatLeft border-right-light">
+							<img src="img/desktop.png" alt="desktop"/>
+						</div>
+						<div class="col-6 floatLeft">
+							<div class="RalewaySemiBold">Expose Your creativeness with amazing feature !</div>
+						</div>
 					</div>
 				</section>
 				
